# denominator-calibrated-living-nma

./: .gitignore  E156-PROTOCOL.md  PROJECT_SPEC.md  README.md  ROADMAP.md  index.html  push.sh  pyproject.toml
configs/: backtest_cardiorenal_example.json  cardio_af_doac_example.json  cardio_hf_sglt2_example.json  simulation_baseline.json
data/cardio_af_doac/: README.md  extraction_records.json  publication_records.json  registry_records.json
data/cardio_hf_sglt2/: README.md  extraction_records.json  publication_records.json  registry_records.json
docs/: CARDIO_DATA_SCHEMA.md  HISTORICAL_BACKTEST_PLAN.md  RAW_INGESTION.md  RCT_EXTRACTOR_BRIDGE.md  SIMULATION_DESIGN.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
raw_sources/cardio_af_doac/: extraction_export.csv  publication_export.csv  registry_export.csv
raw_sources/cardio_hf_sglt2/: extraction_export.csv  publication_export.csv  rct_extractor_mapping.csv  registry_export.csv  sample_rct_extractor_results.jsonl
src/dclnma/: __init__.py  cli.py  pipeline.py
src/dclnma/arbitration/: __init__.py  rules.py
src/dclnma/data/: __init__.py  builders.py  extractor_bridge.py  io.py  linkage.py  models.py  study_mapping.py
src/dclnma/validation/: __init__.py  metrics.py
src/dclnma/witnesses/: __init__.py  base.py
tests/: test_smoke.py
