[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dclnma"
version = "0.1.0"
description = "Starter scaffold for denominator-calibrated living network meta-analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Local project scaffold" }
]
dependencies = []

[project.scripts]
dclnma = "dclnma.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
